# VeilNode

./: .gitignore  Package.swift  README.md  README.zh-CN.md  pyproject.toml
clients/android/: BuildApk.bat  BuildApk.sh  README.md  settings.gradle
clients/android/app/: build.gradle
clients/android/app/src/main/: AndroidManifest.xml
clients/common/python_gui/: veil_gui.py
clients/ios/: BuildIpa.sh  BuildIpaUnsigned.sh  README.md  VeilNodeiOSApp.swift  project.yml
clients/ios/VeilNodeiOS.xcodeproj/: project.pbxproj
clients/ios/VeilNodeiOS.xcodeproj/xcshareddata/xcschemes/: VeilNodeiOS.xcscheme
clients/linux/: README.md  veil-node-gui
clients/macos/Sources/VeilNode/: CommandRunner.swift  VeilNodeApp.swift  Views.swift
clients/nas/: README.md  veil-node-web.py
clients/windows/: BuildExe.bat  README.md  VeilNodeGui.bat  VeilNodeGui.pyw
docs/: PLATFORMS.md  PLATFORMS.zh-CN.md  TECHNICAL.md  TECHNICAL.zh-CN.md
script/: build_and_run.sh
tests/: test_core22.py  test_strategy.py  test_veilnode.py
veil_core/: __main__.py  adapter.py  api.py  archive.py  bootstrap.py  carrier_tools.py  chunks.py  cli.py  compression.py  contacts.py  container.py  crypto.py  diagnostics.py  errors.py  factory.py  gui_bridge.py  identity.py  keypart.py  logging.py  message.py  nodepkg.py  packaging.py  padding.py  permissions.py  platform.py  profile.py  protocol.py  repair.py  replay.py  safety.py  testvectors.py
veil_core/strategy/: __init__.py  dataset.py  features.py  generator.py  model.py  policy.py  registry.py  scorer.py  selector.py  trainer.py
(+3 files in other folders)
